Bugfix: If image is formatted as align: right do that instead of left

--- a/anarchy_theme/static/basic.css
+++ b/anarchy_theme/static/basic.css
@@ -140,7 +140,7 @@ a:hover {
 }
 
 .align-right {
-    float: left;
+    float: right;
     margin: 10px 0 10px 20px;
 }
 
